add link in two modals

--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@ AUC are 87.95% (73/83), 95.00% (19/20), 85.71%
         </p>
 
         <div class="content">
+          <p><a href="http://fikacschoko.pythonanywhere.com/">LINK</a></p>
           <ul>
             <li>Built a website for users to do the lucky draw using Django.</li>
             <li>Implemented frontend and adjusted interfaces with customer’s requirements in JavaScript and HTML/CSS.</li>
@@ -550,6 +551,7 @@ AUC are 87.95% (73/83), 95.00% (19/20), 85.71%
         </p>
 
         <div class="content">
+          <p><a href="https://cool.ntu.edu.tw/login/">LINK</a></p>
           NTUCOOL is a e-Learning platform which let NTU faculties and students able to interact out of the courses.
           <ul>
             <li>Implemented frontend in JavaScript and HTML/CSS.</li>
