--- a/index.html
+++ b/index.html
@@ -301,6 +301,39 @@
 
  
 
+  
+
+  <section class="section section-fixed">
+    <div class="container">
+      <h1 class="title">Extracurricular Experience</h1>
+      <hr />
+
+      <div class="tile is-ancestor">
+        <div class="tile is-vertical is-12">
+          <div class="tile">
+            <div class="tile is-parent is-vertical">
+              <article class="tile is-child notification">
+                <p class="subtitle">WWOOF and Working Holiday</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="activity-1-modal" src="img/activity-1-cover.jpg">
+                </figure>
+              </article>
+            </div>
+            <div class="tile is-parent is-vertical">
+              <article class="tile is-child notification">
+                <p class="subtitle">CSIE Student Association</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="activity-2-modal" src="img/activity-2-cover.jpg">
+                </figure>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <section class="section section-fixed">
     <div class="container">
       <h1 class="title">Contact</h1>
@@ -341,9 +374,13 @@
         </nav>
     </div>
   </section>
+
+
   </div>
 
   <!-- Modals -->
+
+  <!-- thesis modals -->
   <div id="thesis-1-modal" class="modal">
     <div class="modal-background"></div>
     <div class="modal-card">
@@ -512,6 +549,7 @@ AUC are 87.95% (73/83), 95.00% (19/20), 85.71%
     </div>
   </div>
 
+  <!-- project modals -->
 
   <div id="project-1-modal" class="modal">
     <div class="modal-background"></div>
@@ -790,6 +828,86 @@ AUC are 87.95% (73/83), 95.00% (19/20), 85.71%
       </footer>
     </div>
   </div>
+
+  <!-- extracurricular -->
+  <div id="activity-1-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">WWOOF (Volunteering) and Working Holiday</p><p>2016 - 2018</p>
+        <button class="delete" aria-label="close"></button>
+      </header>
+      <section class="modal-card-body">
+        <p class="image is-3by2">
+          <img src="img/activity-1-cover.jpg" alt="">
+        </p>
+
+        <div class="content">
+          <p><i>Volunteered and worked in various industries, such as ranching, farming, and dining, communicated with travelers and local residents in Japanese and English, with full exposure to foreign cultures</i></p>
+          <img src="img/activity-1-1.jpg" alt="">
+          <p>&#x25B2;3 Days Camping, Uluru, Australia</p>
+          <img src="img/activity-1-2.jpg" alt="">
+          <p>&#x25B2;Glacier Hiking, Franz Josef Glacier, New Zealand</p>
+          <img src="img/activity-1-3.jpg" alt="">
+          <p>&#x25B2;Ranching Family, Kanazawa, Japan</p>
+          
+        </div>
+
+        <div class="tags">
+          <span class="tag">Languages</span>
+          <span class="tag">International Experience</span>
+        </div>
+
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-success">Close</button>
+      </footer>
+    </div>
+  </div>
+
+  <div id="activity-2-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">CSIE Student Association</p><p>2009 - 2013</p>
+        <button class="delete" aria-label="close"></button>
+      </header>
+      <section class="modal-card-body">
+        <p class="image is-3by2">
+          <img src="img/activity-2-cover.jpg" alt="">
+        </p>
+
+        <div class="content">
+          <p>&#x25B2;Instructor, CSIE Camp</p>
+          <img src="img/activity-2-1.jpg" alt="">
+          <p>&#x25B2;CSIE booth in NTU Azalea Festival</p>
+          <img src="img/activity-2-2.jpg" alt="">
+          <p>&#x25B2;Band, Night of CSIE</p>
+          <img src="img/activity-2-3.jpg" alt="">
+          <p>&#x25B2;Dancer, Night of CSIE</p>
+          <img src="img/activity-2-4.jpg" alt="">
+          <p>&#x25B2;Cactuses for sale, Week of CSIE</p>
+          <img src="img/design-1-cover.jpg" alt="">
+          <p>&#x25B2;Marketing Material Design, Week of CSIE</p>
+          <img src="img/design-2-cover.jpg" alt="">
+          <p>&#x25B2;Marketing Material Design, CSIE Camp</p>
+          <img src="img/design-3-cover.jpg" alt="">
+          <p>&#x25B2;Marketing Material Design, NTU Azalea Festival</p>
+        </div>
+
+        <div class="tags">
+          <span class="tag">Leadership</span>
+          <span class="tag">Art Skills</span>
+        </div>
+
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-success">Close</button>
+      </footer>
+    </div>
+  </div>
+
+
 
   <footer class="footer" style="position: relative;">
     <div class="content has-text-centered">
