--- a/srttoplain.html
+++ b/srttoplain.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
 
 <head>
+    <title>SRT去除時間碼工具</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
     <h1>SRT去除時間碼工具</h1>
-    <p>UTF8檔案上傳：<input id="file" type="file" value="upload file" /></p>
-    <p>繁體檔案上傳：<input id="file_big5" type="file" value="upload file big5" /></p>
-    <p>簡體檔案上傳：<input id="file_gbk" type="file" value="upload file big5" /></p>
+    <label for="file">UTF8檔案上傳：<input id="file" type="file" value="UTF8" /><br></label>
+    <label for="file_big5">繁體檔案上傳：<input id="file_big5" type="file" value="繁體" /><br></label>
+    <label for="file_gbk">簡體檔案上傳：<input id="file_gbk" type="file" value="簡體" /><br></label>
     <textarea rows="20" id="output" style="width:99%;margin-right:auto"></textarea>
     <br>
     <tr>
-        <td><input type="button" value="去除時間碼-移除空格" onclick="removeTimeCodeRegAll()" /></td>
         <td><input type="button" value="去除時間碼-保留空格" onclick="removeTimeCodeReg()" /></td>
+        <td><input type="button" value="去除時間碼-移除空格" onclick="removeTimeCodeRegAll()" /></td>
         <td><input type="button" value="清空輸入框" onclick="clean()" /></td>
         <td><input type="button" value="複製" onclick="copy()" /></td>
     </tr>
