Add button margin

--- a/srttoplain.html
+++ b/srttoplain.html
@@ -18,11 +18,11 @@
 
         <div class="form-group">
             <label class="btn btn-secondary " for="file">UTF8檔案上傳<input class="d-none" id="file" type="file"
-                    value="UTF8" /><br></label>
+                    value="UTF8" /></label>
             <label class="btn btn-secondary " for="file_big5">繁體檔案上傳<input class="d-none" id="file_big5" type="file"
-                    value="繁體" /><br></label>
+                    value="繁體" /></label>
             <label class="btn btn-secondary " for="file_gbk">簡體檔案上傳<input class="d-none" id="file_gbk" type="file"
-                    value="簡體" /><br></label>
+                    value="簡體" /></label>
 
         </div>
 
@@ -30,11 +30,12 @@
             <label for="output">文本預覽：</label>
             <textarea class="form-control" rows="20" id="output"></textarea>
         </div>
+
         <div class="form-group">
-            <input type="button" value="去除時間碼-保留空格" class="btn btn-primary " onclick="removeTimeCodeReg()" />
-            <input type="button" value="去除時間碼-移除空格" class="btn btn-primary " onclick="removeTimeCodeRegAll()" />
-            <input type="button" value="複製" class="btn btn-primary " onclick="copy()" />
-            <input type="button" value="清空輸入框" class="btn btn-danger " onclick="clean()" />
+            <input type="button" value="去除時間碼-保留空格" class="m-1 btn btn-primary " onclick="removeTimeCodeReg()" />
+            <input type="button" value="去除時間碼-移除空格" class="m-1 btn btn-primary " onclick="removeTimeCodeRegAll()" />
+            <input type="button" value="複製" class="m-1 btn btn-primary " onclick="copy()" />
+            <input type="button" value="清空輸入框" class="m-1 btn btn-danger " onclick="clean()" />
         </div>
 
         <footer>
