--- a/imgtotext.html
+++ b/imgtotext.html
@@ -23,7 +23,7 @@
 
         <div class="form-group">
             <label for="demo">圖片預覽：</label>
-            <img class="img-fluid img-thumbnail" id="demo" src="" height="20%" alt="圖片預覽" />
+            <img class="img-fluid img-thumbnail" id="demo" src="" height="20%" alt="" />
         </div>
 
         <div class="form-group">
