Remove the row limitation of textarea

--- a/imgtotext.html
+++ b/imgtotext.html
@@ -28,12 +28,12 @@
 
         <div class="form-group">
             <label for="output">解析文字：</label>
-            <textarea class="form-control" rows="1" id="output"></textarea>
+            <textarea class="form-control" id="output"></textarea>
         </div>
 
         <div class="form-group">
             <label for="output_translated">翻譯：</label>
-            <textarea class="form-control" rows="1" id="output_translated"></textarea>
+            <textarea class="form-control" id="output_translated"></textarea>
         </div>
 
         <div class="form-group">
