clean the textarea when new img uploading

--- a/imgtotext.html
+++ b/imgtotext.html
@@ -56,6 +56,7 @@
             }, false);
         };
         function readFile(file) {
+            clean();
             var fReader = new FileReader();
             fReader.onload = function (event) {
                 document.getElementById('demo').src = event.target.result;
