--- a/qrscan.html
+++ b/qrscan.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+<script src="src/jsQR.js"></script>
 
 <head>
     <title>QR Code Invoice Scanner</title>
@@ -15,7 +15,12 @@
         <p>
         <h1>QR Code Invoice Scanner</h1>
         </p>
-
+        <div id="loadingMessage">🎥 Unable to access video stream (please make sure you have a webcam enabled)</div>
+        <canvas id="canvas" hidden=""></canvas>
+        <div id="output" hidden="">
+            <div id="outputMessage">No QR code detected.</div>
+            <div hidden=""><b>Data:</b> <span id="outputData"></span></div>
+        </div>
         <div class="form-group">
             <label class="btn btn-primary " for="file">圖片上傳<input class="d-none" id="file" type="file" value="UTF8" />
             </label>
@@ -49,9 +54,61 @@
 
 
     <script>
-        window.onload = function () {
+        var video = document.createElement("video");
+        var canvasElement = document.getElementById("canvas");
+        var canvas = canvasElement.getContext("2d");
+        var loadingMessage = document.getElementById("loadingMessage");
+        var outputContainer = document.getElementById("output");
+        var outputMessage = document.getElementById("outputMessage");
+        var outputData = document.getElementById("outputData");
 
-        };
+        function drawLine(begin, end, color) {
+            canvas.beginPath();
+            canvas.moveTo(begin.x, begin.y);
+            canvas.lineTo(end.x, end.y);
+            canvas.lineWidth = 4;
+            canvas.strokeStyle = color;
+            canvas.stroke();
+        }
+
+        // Use facingMode: environment to attemt to get the front camera on phones
+        navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } }).then(function (stream) {
+            video.srcObject = stream;
+            video.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
+            video.play();
+            requestAnimationFrame(tick);
+        });
+
+        function tick() {
+            loadingMessage.innerText = "⌛ Loading video..."
+            if (video.readyState === video.HAVE_ENOUGH_DATA) {
+                loadingMessage.hidden = true;
+                canvasElement.hidden = false;
+                outputContainer.hidden = false;
+
+                canvasElement.height = video.videoHeight;
+                canvasElement.width = video.videoWidth;
+                canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
+                var imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
+                var code = jsQR(imageData.data, imageData.width, imageData.height, {
+                    inversionAttempts: "dontInvert",
+                });
+                if (code) {
+                    drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
+                    drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
+                    drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
+                    drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
+                    outputMessage.hidden = true;
+                    outputData.parentElement.hidden = false;
+                    outputData.innerText = code.data;
+                    document.getElementById("output").value = code.data;
+                } else {
+                    outputMessage.hidden = false;
+                    outputData.parentElement.hidden = true;
+                }
+            }
+            requestAnimationFrame(tick);
+        }
         let scanner = new Instascan.Scanner({
             continuous: true, // 連續掃描
             video: document.getElementById('preview'), // 預覽
@@ -59,38 +116,7 @@
                 exact: "environment"
             }
         });
-        scanner.addListener('scan', function (content) {
 
-            console.log(content);
-            getConfirmation();
-
-            function getConfirmation() {
-                var retVal = confirm("掃描結果：" + content); // 掃描結果顯示
-                if (retVal == true) {
-                    document.getElementById("output").value = retVal;
-                }
-                // if (retVal == true) {
-                //     var checkurl = /^((https?|http?|file):\/\/)?([\da-z\.-]+)\.([a-z\.]{2,6})([\/\w \.-]*)*\/?$/; // 檢查是否為網址
-                //     if (checkurl.test(content)) {
-                //         window.open(content, "_self"); // 開啟網址
-                //     }
-                //     return true;
-                // } else {
-                //     return false;
-                // }
-            }
-
-
-        });
-        Instascan.Camera.getCameras().then(function (cameras) {
-            if (cameras.length > 0) {
-                scanner.start(cameras[1]); // [0] 前鏡頭 [1] 後鏡頭 
-            } else {
-                console.error('沒有找到相機');
-            }
-        }).catch(function (e) {
-            console.error(e);
-        });
 
         function parse_join() {
             content = document.getElementById("output").value;
