update README.md and add data explanation for QRscan

--- a/qrscan.html
+++ b/qrscan.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="form-group">
-            <label for="output_csv">csv暫存框：</label>
+            <label for="output_csv">csv暫存框：(發票號碼,日期,發票總金額,項目,公司統編)</label>
             <textarea class="form-control" id="output_csv"></textarea>
         </div>
 
