fix bug: parse tax price

--- a/qrscan.html
+++ b/qrscan.html
@@ -128,13 +128,13 @@
             content = document.getElementById("output_wait").value;
             let dateRegexp = /(?<inv_num>[A-Z]{2}[0-9]{8})(?<date>.{7})(?<rand>.{4})(?<price>.{8})(?<total_price>.{8})(?<buyer>.{8})(?<seller>.{8}).+\:.+\:.+\:.+\:.+\:(?<name>.+)\:(?<p_num>[\d])+\:(?<p_per_price>[\d])+\:/;
             let groups = content.match(dateRegexp).groups;
-            document.getElementById("output_csv").value += groups.inv_num + "," + groups.date + "," + parseInt(groups.price, 16) + "," + groups.name + "," + groups.seller + "\n";
+            document.getElementById("output_csv").value += groups.inv_num + "," + groups.date + "," + parseInt(groups.total_price, 16) + "," + groups.name + "," + groups.seller + "\n";
         }
         function parse_join_2() {
             content = document.getElementById("output_wait").value;
             let dateRegexp = /(?<inv_num>[A-Z]{2}[0-9]{8})(?<date>.{7})(?<rand>.{4})(?<price>.{8})(?<total_price>.{8})(?<buyer>.{8})(?<seller>.{8})(?<AES>.{24})\:(.{10})\:(.{1})\:(.{1})\:(.{1})(?<rest>.+)/;
             let groups = content.match(dateRegexp).groups;
-            document.getElementById("output_csv").value += groups.inv_num + "," + groups.date + "," + parseInt(groups.price, 16) + "," + groups.rest + "," + groups.seller + "\n";
+            document.getElementById("output_csv").value += groups.inv_num + "," + groups.date + "," + parseInt(groups.total_price, 16) + "," + groups.rest + "," + groups.seller + "\n";
         }
         function add_to_wait() {
             document.getElementById("output_wait").value += document.getElementById("output_tmp").value
