add link for danbo

--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
         <p class="image is-3by2">
           <img src="img/project-9-cover.png" alt="">
         </p>
-
+        <p><a href="https://www.youtube.com/watch?v=v5v6r2HUlTc">[YOUTUBE LINK]</a></p>
         <div class="content">
           Used VFX and motion tracking to complete a video.
         </div>
