--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div style="position: fixed; width: 100%">
     <a href="https://tingyincc.github.io/img/bg.jpg" class="progressive replace">
-      <img src="img/bg-tiny.jpg" class="preview" alt="image" />
+      <img src="img/bg.jpg" class="preview" alt="image" />
     </a>
   </div>
   <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
